# eop

./: .gitignore  README.md  clean_all.sh  make_all.sh
code/: CMakeLists.txt  op.pro
code/include/: eol_op.h  eol_op_global.h  eol_small_array.h  eol_tensor.h  eol_type.h
code/op/: op.cc
code/op/onnx/: roi_align.cc  roi_align.h
code/res/: eol_log_manager.cc  eol_log_manager.h  eol_op_manager.cc  eol_op_manager.h  eol_res.cc  eol_res.h
code/utils/: eol_blocking_list.h  eol_config.cc  eol_config.h  eol_cpu_timer.cc  eol_log.cc  eol_log.h  eol_task_thread.cc  eol_task_thread.h  eol_timer.h
test/: CMakeLists.txt  main.cc  op_test.pro
test/onnx/: test_roi_align.cc
